u-boot: workaround for setlocalversion issue
The u-boot build process attempts to determine the version number using git
commands, which assumes that the build is taking place in a git checkout with
the .git directory intact. The buildroot build process does a git checkout, but
then exports a .tar.gz as a cache and does the build from that tarball (with no
.git file).

In some instances, being unable to determine the current version causes the
build process to generate a non-functional bootloader.

This patch implements a work-around for this problem by allowing the user to
configure a 'localverion' override which gets written to the ./localversion
file in the u-boot build directory, which is later used by the
./tools/setlocalversion script.

--- a/boot/uboot/Config.in
+++ b/boot/uboot/Config.in
@@ -68,6 +68,9 @@ config BR2_TARGET_UBOOT_CUSTOM_GIT_REPO_URL
 config BR2_TARGET_UBOOT_CUSTOM_GIT_VERSION
 	string "Custom Git version"
 
+config BR2_TARGET_UBOOT_CUSTOM_GIT_LOCALVERSION
+	string "Custom 'localversion' (to override setlocalversion)"
+
 endif
 
 choice
@@ -93,6 +96,10 @@ config BR2_TARGET_UBOOT_FORMAT_NAND_BIN
 config BR2_TARGET_UBOOT_FORMAT_KWB
 	depends on BR2_arm
 	bool "u-boot.kwb (Marvell)"
+
+config BR2_TARGET_UBOOT_FORMAT_IMX
+	depends on BR2_arm
+	bool "u-boot.imx (Freescale)"
 
 config BR2_TARGET_UBOOT_FORMAT_LDR
 	depends on BR2_bfin
