--- a/board/kosagi/novena/linux-3.10.config
+++ b/board/kosagi/novena/linux-3.10.config
@@ -1,11 +1,10 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 3.10.0-rc2 Kernel Configuration
+# Linux/arm 3.10.0-rc7 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
 CONFIG_HAVE_PROC_CPU=y
-CONFIG_NO_IOPORT=y
 CONFIG_STACKTRACE_SUPPORT=y
 CONFIG_LOCKDEP_SUPPORT=y
 CONFIG_TRACE_IRQFLAGS_SUPPORT=y
@@ -375,21 +374,11 @@ CONFIG_IMX_HAVE_PLATFORM_SPI_IMX=y
 # CONFIG_ARCH_SIRF is not set
 # CONFIG_ARCH_TEGRA is not set
 # CONFIG_ARCH_U8500 is not set
-CONFIG_ARCH_VEXPRESS=y
-
-#
-# Versatile Express platform type
-#
-CONFIG_ARCH_VEXPRESS_CORTEX_A5_A9_ERRATA=y
-# CONFIG_ARCH_VEXPRESS_CA9X4 is not set
-CONFIG_PLAT_VERSATILE_CLCD=y
-CONFIG_PLAT_VERSATILE_SCHED_CLOCK=y
+# CONFIG_ARCH_VEXPRESS is not set
 # CONFIG_ARCH_VIRT is not set
 # CONFIG_ARCH_WM8750 is not set
 # CONFIG_ARCH_WM8850 is not set
 # CONFIG_ARCH_ZYNQ is not set
-CONFIG_PLAT_VERSATILE=y
-CONFIG_ARM_TIMER_SP804=y
 
 #
 # Processor Type
@@ -426,10 +415,7 @@ CONFIG_ARM_VIRT_EXT=y
 # CONFIG_CPU_DCACHE_DISABLE is not set
 # CONFIG_CPU_BPREDICT_DISABLE is not set
 CONFIG_DMA_CACHE_RWFO=y
-CONFIG_OUTER_CACHE=y
-CONFIG_OUTER_CACHE_SYNC=y
-CONFIG_MIGHT_HAVE_CACHE_L2X0=y
-CONFIG_CACHE_L2X0=y
+# CONFIG_CACHE_L2X0 is not set
 CONFIG_ARM_L1_CACHE_SHIFT_6=y
 CONFIG_ARM_L1_CACHE_SHIFT=6
 CONFIG_ARM_DMA_MEM_BUFFERABLE=y
@@ -438,21 +424,17 @@ CONFIG_MULTI_IRQ_HANDLER=y
 # CONFIG_ARM_ERRATA_326103 is not set
 # CONFIG_ARM_ERRATA_411920 is not set
 # CONFIG_ARM_ERRATA_430973 is not set
-# CONFIG_PL310_ERRATA_588369 is not set
-CONFIG_ARM_ERRATA_720789=y
-# CONFIG_PL310_ERRATA_727915 is not set
+# CONFIG_ARM_ERRATA_643719 is not set
+# CONFIG_ARM_ERRATA_720789 is not set
 CONFIG_ARM_ERRATA_754322=y
 # CONFIG_ARM_ERRATA_754327 is not set
 CONFIG_ARM_ERRATA_764369=y
-# CONFIG_PL310_ERRATA_769419 is not set
 CONFIG_ARM_ERRATA_775420=y
 # CONFIG_ARM_ERRATA_798181 is not set
-CONFIG_ICST=y
 
 #
 # Bus support
 #
-CONFIG_ARM_AMBA=y
 CONFIG_PCI=y
 CONFIG_PCI_SYSCALL=y
 CONFIG_PCIEPORTBUS=y
@@ -1157,7 +1139,6 @@ CONFIG_BLK_DEV_RAM_SIZE=65536
 # CONFIG_HMC6352 is not set
 # CONFIG_DS1682 is not set
 # CONFIG_TI_DAC7512 is not set
-# CONFIG_ARM_CHARLCD is not set
 # CONFIG_BMP085_I2C is not set
 # CONFIG_BMP085_SPI is not set
 # CONFIG_PCH_PHUB is not set
@@ -1228,7 +1209,6 @@ CONFIG_SCSI_SCAN_ASYNC=y
 # CONFIG_SCSI_LOWLEVEL is not set
 # CONFIG_SCSI_DH is not set
 # CONFIG_SCSI_OSD_INITIATOR is not set
-CONFIG_HAVE_PATA_PLATFORM=y
 CONFIG_ATA=y
 # CONFIG_ATA_NONSTANDARD is not set
 CONFIG_ATA_VERBOSE_ERROR=y
@@ -1284,6 +1264,7 @@ CONFIG_MII=y
 # CONFIG_NET_DSA_MV88E6123_61_65 is not set
 CONFIG_ETHERNET=y
 CONFIG_NET_VENDOR_3COM=y
+# CONFIG_VORTEX is not set
 # CONFIG_TYPHOON is not set
 CONFIG_NET_VENDOR_ADAPTEC=y
 # CONFIG_ADAPTEC_STARFIRE is not set
@@ -1479,7 +1460,7 @@ CONFIG_ATH9K_PCI=y
 # CONFIG_ATH9K_AHB is not set
 CONFIG_ATH9K_DEBUGFS=y
 CONFIG_ATH9K_MAC_DEBUG=y
-CONFIG_ATH9K_RATE_CONTROL=y
+# CONFIG_ATH9K_LEGACY_RATE_CONTROL is not set
 CONFIG_ATH9K_HTC=y
 # CONFIG_ATH9K_HTC_DEBUGFS is not set
 CONFIG_CARL9170=y
@@ -1655,7 +1636,6 @@ CONFIG_INPUT_MMA8450=y
 #
 CONFIG_SERIO=y
 CONFIG_SERIO_SERPORT=m
-# CONFIG_SERIO_AMBAKMI is not set
 # CONFIG_SERIO_PCIPS2 is not set
 CONFIG_SERIO_LIBPS2=y
 # CONFIG_SERIO_RAW is not set
@@ -1692,8 +1672,6 @@ CONFIG_UNIX98_PTYS=y
 #
 # Non-8250 serial port support
 #
-# CONFIG_SERIAL_AMBA_PL010 is not set
-# CONFIG_SERIAL_AMBA_PL011 is not set
 # CONFIG_SERIAL_MAX3100 is not set
 # CONFIG_SERIAL_MAX310X is not set
 # CONFIG_SERIAL_MFD_HSU is not set
@@ -1771,12 +1749,10 @@ CONFIG_I2C_ALGOPCA=m
 # CONFIG_I2C_GPIO is not set
 CONFIG_I2C_IMX=y
 # CONFIG_I2C_INTEL_MID is not set
-# CONFIG_I2C_NOMADIK is not set
 # CONFIG_I2C_OCORES is not set
 # CONFIG_I2C_PCA_PLATFORM is not set
 # CONFIG_I2C_PXA_PCI is not set
 # CONFIG_I2C_SIMTEC is not set
-# CONFIG_I2C_VERSATILE is not set
 # CONFIG_I2C_XILINX is not set
 
 #
@@ -1807,7 +1783,6 @@ CONFIG_SPI_BITBANG=y
 CONFIG_SPI_IMX=y
 # CONFIG_SPI_FSL_SPI is not set
 # CONFIG_SPI_OC_TINY is not set
-# CONFIG_SPI_PL022 is not set
 # CONFIG_SPI_PXA2XX is not set
 # CONFIG_SPI_PXA2XX_PCI is not set
 # CONFIG_SPI_SC18IS602 is not set
@@ -1886,7 +1861,6 @@ CONFIG_GPIO_GENERIC=y
 # CONFIG_GPIO_GENERIC_PLATFORM is not set
 # CONFIG_GPIO_EM is not set
 CONFIG_GPIO_MXC=y
-# CONFIG_GPIO_PL061 is not set
 # CONFIG_GPIO_RCAR is not set
 # CONFIG_GPIO_TS5500 is not set
 # CONFIG_GPIO_VX855 is not set
@@ -1955,7 +1929,6 @@ CONFIG_POWER_SUPPLY=y
 CONFIG_POWER_RESET=y
 # CONFIG_POWER_RESET_GPIO is not set
 # CONFIG_POWER_RESET_RESTART is not set
-CONFIG_POWER_RESET_VEXPRESS=y
 # CONFIG_POWER_AVS is not set
 # CONFIG_HWMON is not set
 # CONFIG_THERMAL is not set
@@ -1968,7 +1941,6 @@ CONFIG_WATCHDOG=y
 #
 # CONFIG_SOFT_WATCHDOG is not set
 # CONFIG_DA9052_WATCHDOG is not set
-# CONFIG_ARM_SP805_WATCHDOG is not set
 # CONFIG_DW_WATCHDOG is not set
 # CONFIG_MPCORE_WATCHDOG is not set
 # CONFIG_MAX63XX_WATCHDOG is not set
@@ -2084,7 +2056,6 @@ CONFIG_MFD_SYSCON=y
 # CONFIG_MFD_WM831X_SPI is not set
 # CONFIG_MFD_WM8350_I2C is not set
 # CONFIG_MFD_WM8994 is not set
-CONFIG_VEXPRESS_CONFIG=y
 CONFIG_REGULATOR=y
 # CONFIG_REGULATOR_DEBUG is not set
 # CONFIG_REGULATOR_DUMMY is not set
@@ -2114,7 +2085,6 @@ CONFIG_REGULATOR_MC13892=y
 # CONFIG_REGULATOR_TPS65023 is not set
 # CONFIG_REGULATOR_TPS6507X is not set
 # CONFIG_REGULATOR_TPS6524X is not set
-# CONFIG_REGULATOR_VEXPRESS is not set
 CONFIG_MEDIA_SUPPORT=y
 
 #
@@ -2288,7 +2258,6 @@ CONFIG_FB_SYS_IMAGEBLIT=y
 #
 # CONFIG_FB_CIRRUS is not set
 # CONFIG_FB_PM2 is not set
-# CONFIG_FB_ARMCLCD is not set
 # CONFIG_FB_IMX is not set
 # CONFIG_FB_CYBER2000 is not set
 # CONFIG_FB_ASILIANT is not set
@@ -2429,6 +2398,7 @@ CONFIG_SND_PCI=y
 # CONFIG_SND_INTEL8X0M is not set
 # CONFIG_SND_KORG1212 is not set
 # CONFIG_SND_LOLA is not set
+# CONFIG_SND_LX6464ES is not set
 # CONFIG_SND_MAESTRO3 is not set
 # CONFIG_SND_MIXART is not set
 # CONFIG_SND_NM256 is not set
@@ -2445,7 +2415,6 @@ CONFIG_SND_PCI=y
 # CONFIG_SND_VX222 is not set
 # CONFIG_SND_YMFPCI is not set
 CONFIG_SND_ARM=y
-# CONFIG_SND_ARMAACI is not set
 CONFIG_SND_SPI=y
 CONFIG_SND_USB=y
 # CONFIG_SND_USB_AUDIO is not set
@@ -2745,7 +2714,6 @@ CONFIG_MMC_BLOCK_BOUNCE=y
 #
 # MMC/SD/SDIO Host Controller Drivers
 #
-# CONFIG_MMC_ARMMMCI is not set
 CONFIG_MMC_SDHCI=y
 CONFIG_MMC_SDHCI_IO_ACCESSORS=y
 # CONFIG_MMC_SDHCI_PCI is not set
@@ -2888,8 +2856,6 @@ CONFIG_RTC_INTF_DEV_UIE_EMUL=y
 # on-CPU RTC drivers
 #
 # CONFIG_RTC_DRV_IMXDI is not set
-# CONFIG_RTC_DRV_PL030 is not set
-# CONFIG_RTC_DRV_PL031 is not set
 CONFIG_RTC_DRV_MC13XXX=y
 CONFIG_RTC_DRV_MXC=y
 CONFIG_RTC_DRV_SNVS=y
@@ -2904,12 +2870,10 @@ CONFIG_DMADEVICES=y
 #
 # DMA Devices
 #
-# CONFIG_AMBA_PL08X is not set
 # CONFIG_DW_DMAC is not set
 CONFIG_MX3_IPU=y
 CONFIG_MX3_IPU_IRQS=4
 # CONFIG_TIMB_DMA is not set
-# CONFIG_PL330_DMA is not set
 CONFIG_IMX_SDMA=y
 # CONFIG_IMX_DMA is not set
 CONFIG_MXS_DMA=y
@@ -2982,6 +2946,7 @@ CONFIG_DRM_IMX=y
 CONFIG_DRM_IMX_FB_HELPER=y
 CONFIG_DRM_IMX_PARALLEL_DISPLAY=y
 CONFIG_DRM_IMX_TVE=y
+# CONFIG_DRM_IMX_LDB is not set
 CONFIG_DRM_IMX_IPUV3_CORE=y
 CONFIG_DRM_IMX_IPUV3=y
 # CONFIG_DGRP is not set
@@ -2993,7 +2958,6 @@ CONFIG_COMMON_CLK=y
 # Common Clock Framework
 #
 CONFIG_COMMON_CLK_DEBUG=y
-CONFIG_COMMON_CLK_VERSATILE=y
 # CONFIG_COMMON_CLK_SI5351 is not set
 
 #
@@ -3320,9 +3284,6 @@ CONFIG_DEBUG_LL=y
 # CONFIG_DEBUG_IMX51_UART is not set
 # CONFIG_DEBUG_IMX53_UART is not set
 CONFIG_DEBUG_IMX6Q_UART=y
-# CONFIG_DEBUG_VEXPRESS_UART0_DETECT is not set
-# CONFIG_DEBUG_VEXPRESS_UART0_CA9 is not set
-# CONFIG_DEBUG_VEXPRESS_UART0_RS1 is not set
 # CONFIG_DEBUG_ICEDCC is not set
 # CONFIG_DEBUG_SEMIHOSTING is not set
 CONFIG_DEBUG_IMX_UART_PORT=2
@@ -3330,7 +3291,6 @@ CONFIG_DEBUG_LL_INCLUDE="debug/imx.S"
 CONFIG_DEBUG_UNCOMPRESS=y
 CONFIG_UNCOMPRESS_INCLUDE="debug/uncompress.h"
 CONFIG_EARLY_PRINTK=y
-# CONFIG_OC_ETM is not set
 # CONFIG_PID_IN_CONTEXTIDR is not set
 
 #
@@ -3492,6 +3452,7 @@ CONFIG_TEXTSEARCH_KMP=y
 CONFIG_TEXTSEARCH_BM=y
 CONFIG_TEXTSEARCH_FSM=y
 CONFIG_HAS_IOMEM=y
+CONFIG_HAS_IOPORT=y
 CONFIG_HAS_DMA=y
 CONFIG_CPU_RMAP=y
 CONFIG_DQL=y
