--- a/polystrap/novena/root/etc/ld.so.conf
+++ b/polystrap/novena/root/etc/ld.so.conf
@@ -1,1 +1,2 @@
-../../../default/root/etc/ld.so.conf
+# supply ld.so.conf for fake ldd (running libc6 postinst script will fail)
+include /etc/ld.so.conf.d/*.conf
